# your_project

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: default.yaml  eval_global_only.yaml  eval_hotpot.yaml  eval_sample.yaml  hipporag.yaml  hipporag_e5.yaml  hotpot.yaml  hotpot_graph.yaml  local.yaml  ollama.yaml  profile_community.yaml  profile_general.yaml
docs/: ARCHITECTURE.md  DESIGN_GRAPH.md  DESIGN_MES_WMS.md  EXTERNAL_VALIDATION.md  GUIDE_ARCHITECTURE.md  GUIDE_RUN.md  LOG_PAPER_GRAPHRAG.md  LOG_WORK.md  MES_WMS.md  PROFILES.md  REDESIGN_A.md  RESULT_PROFILES.md  RESULT_SUMMARY.md  RUN_GUIDE.md  SUMMARY.md  TECH_REFERENCE.md  VALIDATION.md  VALIDATION_EXTERNAL.md  WORKLOG.md  graphrag_논문정리.md  번역_CausalRAG.md  번역_GraphRAG.md  번역_RAG.md
scripts/: build_community_summaries.py  e5_openai_server.py  generate_large_corpus.py  generate_rich_corpus.py  migrate_graph_to_neo4j.py
src/ragbench/: __init__.py  cli.py  registry.py
src/ragbench/core/: config.py  interface.py
src/ragbench/embeddings/: factory.py
src/ragbench/eval/: dataset.py  harness.py  judge.py  metrics.py
src/ragbench/ingest/: loader.py
src/ragbench/llms/: factory.py
src/ragbench/methods/: _common.py  bm25.py  graphrag.py  graphrag_e2b.py  hipporag.py  hybrid.py  standard.py
